# habit-hooks

./: .gitignore  .habit-hooks-baseline.json  .jscpd.json  .prettierignore  CHANGELOG.md  CLAUDE.md  DECISIONS.md  GOAL.md  README.md  conftest.py  eslint.config.js  habit-hooks  habit-hooks.config.js  habit-mapper  knip.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.habit-hooks/: config.toml
docs/: DECISIONS.md  architecture.md  authoring-plugins.spec.md  building-a-plugin.md  building-a-plugin.spec.md  config.md  guide-includes.spec.md  guide.md  habit-hooks.spec.md  habit-mapper.spec.md  habit-sensors.spec.md  habit-snooze.spec.md  mapper-cli.md  mapper.md  mapper.spec.md  python-plugin.spec.md  sensor-interface.spec.md  sensors.md  smell-vocabulary.md  snoozer.spec.md  typescript-plugin.spec.md
packaging/npm/: README.md  package.json
plugins/csharp/sensors/: linter.sh
plugins/generic/: pyproject.toml
plugins/generic/docs/: generic-plugin.spec.md
plugins/generic/guides/: clean.md  deep-nesting.md  duplicated-code.md  high-complexity.md  needs-extraction.md  oversized-file.md  oversized-function.issues.njk  oversized-function.md  swallowed-exception.md  too-many-parameters.md  unused-export.md  warning-comment.md
plugins/generic/src/habit_hooks_generic/: .jscpd.json
plugins/generic/src/habit_hooks_generic/guides/: deep-nesting.md  duplicated-code.md  high-complexity.md  non-essential-comment.md  oversized-file.md  oversized-function.md  parse-error.md  swallowed-exception.md  too-many-parameters.md  unused-export.md  warning-comment.md
plugins/generic/src/habit_hooks_generic/sensors/: jscpd.toml  line-count.toml
plugins/php/: pyproject.toml
plugins/php/docs/: php-plugin.spec.md
plugins/php/src/habit_hooks_php/guides/: unused-variable.md
plugins/php/src/habit_hooks_php/sensors/: phpmd.toml
plugins/python/: config.toml  pyproject.toml  ruff.toml
plugins/python/docs/: python-plugin.spec.md
plugins/python/sensors/: deptry.toml  deptry_sensor.py  ruff.toml
plugins/python/src/habit_hooks_python/guides/: high-complexity.md  swallowed-exception.md
plugins/python/src/habit_hooks_python/sensors/: deptry.toml
plugins/typescript/: config.toml  eslint.config.mjs  knip.json  pyproject.toml
plugins/typescript/sensors/: comment.js  comment.toml  eslint.toml  knip.js  knip.toml
plugins/typescript/src/habit_hooks_typescript/: eslint.config.mjs  knip.json
plugins/typescript/src/habit_hooks_typescript/guides/: non-null-assertion.md
skills/habit-hooks-review/: SKILL.md
skills/release-habit-hooks/: SKILL.md
src/: acceptance.test.ts  cli-output.test.ts  cli.test.ts  cli.ts  deep-nesting.test.ts  discover-files.test.ts  discover.ts  eslint-runner.ts  index.ts  mapper-cli.test.ts  mapper-cli.ts  python-acceptance.test.ts  reporter.test.ts  reporter.ts  runner.test.ts  runner.ts  types.ts
src/baseline/: auto-prune.test.ts  auto-prune.ts  commands.ts  filter.test.ts  filter.ts  snooze-index.test.ts  snooze-index.ts  store.ts
src/checks/: comment-check.test.ts  comment-check.ts  eslint-check.test.ts  eslint-check.ts  eslint-wrap.ts  jscpd-check.test.ts  jscpd-check.ts  jscpd-wrap.test.ts  jscpd-wrap.ts  knip-check.test.ts  knip-check.ts  knip-merge.ts  knip-resolve.ts  knip-schema.ts  knip-wrap.test.ts  knip-wrap.ts
src/cli/: baseline-commands.ts  emit.ts  init-command.ts
src/cli/init/: detect.test.ts  detect.ts  git-hook.ts  install-commands.test.ts  install-commands.ts  package-scripts.ts  prompts.ts  reporters.ts  run.e2e.test.ts  run.test.ts  run.ts  scaffold-baseline.ts  scaffold-config.ts  scaffold-eslint-config.test.ts  scaffold-eslint-config.ts  scaffold-jscpd-config.test.ts  scaffold-jscpd-config.ts  scaffold-knip-config.test.ts  scaffold-knip-config.ts  skill.test.ts  skill.ts  snippet.ts  tool-steps.ts
src/config/: catalogue-unused.ts  catalogue.ts  defaults.test.ts  defaults.ts  docs-sensors-honesty.test.ts  load.test.ts  load.ts  merge.ts  rules-deprecation.test.ts  schema.ts  tool-smells.test.ts  tool-smells.ts  validate.ts  warnings.ts
src/detect/: package-json.ts  path.ts  tool.test.ts  tool.ts
src/git/: resolve-scope.ts  scope.ts
src/guide/: command.test.ts  command.ts  guide.test.ts  guide.ts
src/habit_hooks/: catalogue.py  config.py  hooks.py  mapper.py  resolve.py  sensors.py
src/habit_hooks/sensors/: __init__.py  execution.py  loader.py  model.py
src/mapper/: mapper.test.ts  mapper.ts
src/mapper-cli/: guides.ts  run.test.ts  run.ts  stdin.ts
src/prompts/: REVIEW.md  comment-non-essential.md  coverage.test.ts  eslint-complexity.md  eslint-eqeqeq.md  eslint-fatal.md  eslint-max-lines-per-function.md  eslint-max-lines.md  eslint-max-params.md  eslint-no-duplicate-imports.md  eslint-no-unused-vars.md  eslint-no-var.md  eslint-no-warning-comments.md  eslint-prefer-const.md  eslint-typescript-eslint-no-explicit-any.md  eslint-typescript-eslint-no-inferrable-types.md  eslint-typescript-eslint-no-non-null-assertion.md  knip-types.md  knip-unused-class-members.md  loader.test.ts  loader.ts  packaged-dir.ts  registry.test.ts  registry.ts  uncoached.md
src/rules/: registry.test.ts  registry.ts
src/sensors/: adapter.ts  deptry-sensor.ts  leaf.ts  needs-extraction.ts  preset.test.ts  preset.ts  python-preset.test.ts  python-preset.ts  registry.ts  runner.ts
src/skills/habit-hooks-prompting/: SKILL.md
src/spec-md/: framework.test.ts  spec-md.test.ts
src/wrap/: notices.ts  run.test.ts  run.ts  shell.test.ts  shell.ts
tests/: harness.py  test_config.py  test_execution.py  test_installed_wheel_smoke.py
tests/fixtures/: max-params.ts
tests/fixtures/configured-project/: habit-hooks.config.ts
tests/fixtures/custom-language-project/: habit-hooks.config.json  sensor.js
tests/fixtures/custom-sensor-project/: habit-hooks.config.json  sensor.js
tests/fixtures/dirty-project/: bad.ts
tests/fixtures/sample-project/: knip.json  package.json
tests/fixtures/spec-md/: selftest.spec.md
tests/helpers/spec-md/: parser.ts  runner.ts
(+23 files in other folders)
