[project]
name = "habit-hooks"
version = "0.0.0"
description = "Turn best-practice coding advice into AI habits — structural code-smell coaching for AI agents"
requires-python = ">=3.11"
dependencies = ["jinja2>=3", "pathspec>=0.12", "pydantic>=2"]

[project.scripts]
habit-mapper = "habit_hooks.mapper:main"
habit-sensors = "habit_hooks.sensors:main"
habit-snooze = "habit_hooks.snooze:main"
habit-hooks = "habit_hooks.hooks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/habit_hooks"]

[dependency-groups]
dev = [
    "pytest>=8",
    "markdown-it-py>=3",
    "ruff>=0.15.20",
    "deptry>=0.25.1",
]

[tool.pytest.ini_options]
testpaths = ["tests", "docs"]
pythonpath = ["tests", "src"]

[tool.deptry]
# `harness` is our own package (tests/, on pytest's pythonpath).
known_first_party = ["harness"]

[tool.deptry.per_rule_ignores]
# pytest is a dev-only test framework; its use in pytest's own conftest glue is
# expected, not a misplaced production dependency.
DEP004 = ["pytest"]
