[project]
name = "habit-hooks"
version = "1.0.3"
description = "Turn best-practice coding advice into AI habits — structural code-smell coaching for AI agents"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3",
    "pathspec>=0.12",
    "attrs>=23",
    "habit-hooks-generic~=1.0",
]

[project.optional-dependencies]
python = ["habit-hooks-python~=1.0"]
typescript = ["habit-hooks-typescript~=1.0"]
php = ["habit-hooks-php~=1.0"]
all = [
    "habit-hooks-python~=1.0",
    "habit-hooks-typescript~=1.0",
    "habit-hooks-php~=1.0",
]

[project.scripts]
habit-mapper = "habit_hooks.mapper:main"
habit-sensors = "habit_hooks.sensors:main"
habit-snooze = "habit_hooks.snooze:main"
habit-hooks = "habit_hooks.hooks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/habit_hooks"]

[tool.uv.workspace]
members = ["plugins/*"]

[tool.uv.sources]
habit-hooks-generic = { workspace = true }
habit-hooks-python = { workspace = true }
habit-hooks-typescript = { workspace = true }
habit-hooks-php = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "markdown-it-py>=3",
    "ruff>=0.15.20",
    "deptry>=0.25.1",
    "habit-hooks-generic",
    "habit-hooks-python",
    "habit-hooks-typescript",
    "habit-hooks-php",
]

[tool.pytest.ini_options]
testpaths = ["tests", "docs", "plugins"]
pythonpath = ["tests", "src"]

[tool.deptry]
# `harness` is our own package (tests/, on pytest's pythonpath).
known_first_party = ["harness"]

[tool.deptry.per_rule_ignores]
# pytest is a dev-only test framework; its use in pytest's own conftest glue is
# expected, not a misplaced production dependency.
DEP004 = ["pytest"]
# Plugin extras are runtime-discovered packages (importlib.metadata entry points),
# never imported, so deptry cannot see they are used.
DEP002 = [
    "habit-hooks-generic",
    "habit-hooks-python",
    "habit-hooks-typescript",
    "habit-hooks-php",
]

[tool.ruff.lint]
# Dogfood the python plugin's recommended structural thresholds
# (plugins/python/src/habit_hooks_python/ruff.toml). extend-select turns the
# three checks on; the blocks below set the limits. Without extend-select the
# thresholds are inert, so both parts are required.
extend-select = ["C901", "PLR0913", "PLR0915"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 3
max-statements = 12
