[project]
name = "habit-hooks-generic"
version = "1.0.1"
description = "The generic (language-agnostic) Habit Hooks plugin"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."habit_hooks.plugins"]
generic = "habit_hooks_generic"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/habit_hooks_generic"]
artifacts = ["src/habit_hooks_generic/.jscpd.json"]
