[project]
name = "habit-hooks-python"
version = "1.0.1"
description = "The Python Habit Hooks plugin"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."habit_hooks.plugins"]
python = "habit_hooks_python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/habit_hooks_python"]
