[project]
name = "habit-hooks-typescript"
version = "1.0.0"
description = "The TypeScript Habit Hooks plugin"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."habit_hooks.plugins"]
typescript = "habit_hooks_typescript"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/habit_hooks_typescript"]
